--- a/listings/templates/listings/listing_list.html
+++ b/listings/templates/listings/listing_list.html
@@ -1,3 +1,11 @@
 {% extends 'base_template.html' %}
 
-{% block content %} Hello World!{% endblock %}
+{% block page_title %} Listings{% endblock %}
+
+{% block content %}
+<ul class="list-group">
+    {% for listing in listing_list %}
+        <li class="list-group-item">{{ listing.title }} <img src="{{ listing.image.url }}"></li>
+    {% endfor %}
+</ul>
+{% endblock %}
