--- a/common/templates/base_template.html
+++ b/common/templates/base_template.html
@@ -9,6 +9,20 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">People with Pets App</a>
+              <div class="d-flex">
+                {% if user.is_authenticated %}
+                <div class="dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Hello {{ user.first_name }}
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+                </div>
+                {% else %}
+                    <a class="btn btn-primary btn-sm" role="button" href="{% url 'login' %}">Log In</a>
+                {% endif %}
+              </div>
             </div>
         </nav>
         <div id="content" class="container">
