--- a/common/templates/base_template.html
+++ b/common/templates/base_template.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
         <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
         <title>{% block title %}{% endblock %}</title>
+
+        {% block css %}{% endblock %}
+        {% block scripts %}{% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-light bg-light">
