--- a/common/templates/base_template.html
+++ b/common/templates/base_template.html
@@ -1,36 +1,71 @@
 {% load static %}
 <html>
-    <head>
-        <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-        <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-        <title>{% block title %}{% endblock %}</title>
 
-        {% block css %}{% endblock %}
-        {% block scripts %}{% endblock %}
-    </head>
-    <body>
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">People with Pets App</a>
-              <div class="d-flex">
-                {% if user.is_authenticated %}
-                <div class="dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Hello {{ user.first_name }}
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                    </ul>
-                </div>
-                {% else %}
-                    <a class="btn btn-primary btn-sm" role="button" href="{% url 'login' %}">Log In</a>
-                {% endif %}
-              </div>
+<head>
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <title>{% block title %}{% endblock %}</title>
+
+    {% block css %}{% endblock %}
+    {% block scripts %}{% endblock %}
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">Second Life Sales</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Hello {{ user.first_name }}
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="d-flex" method="GET" action="{% url 'home' %}">
+                    <input name="q" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                <div class="d-flex">
+                    {% if user.is_authenticated %}
+                    <div class="me-2">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Hello {{ user.first_name }}
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
+                    </div>
+                    {% else %}
+                        <a class="btn btn-primary me-2" role="button" href="{% url 'login' %}">Log In</a>
+                    {% endif %}
+                  </div>
             </div>
-        </nav>
-        <div id="content" class="container">
-            <h2 id=title>{% block page_title %}{% endblock %}</h2>
-            {% block content %}{% endblock %}
         </div>
-    </body>
+    </nav>
+
+    <div id="content" class="container">
+        <h2 id=title>{% block page_title %}{% endblock %}</h2>
+        {% block content %}{% endblock %}
+    </div>
+</body>
+
 </html>
