--- a/listings/templates/listings/listings_home.html
+++ b/listings/templates/listings/listings_home.html
@@ -11,23 +11,25 @@
 <div class="row">
     {% for listing in listings %}
         <div class="listing-container col-6">
-            <div class="card">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="{{ listing.image.url }}" class="img-fluid rounded-start" alt="Image of {{ listing.title }}">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-header">
-                            {{ listing.title }}
+            <a href="{% url 'listing_details' listing.pk %}">
+                <div class="card">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="{{ listing.image.url }}" class="img-fluid rounded-start" alt="Image of {{ listing.title }}">
                         </div>
+                        <div class="col-md-8">
+                            <div class="card-header">
+                                {{ listing.title }}
+                            </div>
 
-                        <div class="card-body">
-                            <h5 class="card-title">${{ listing.price | floatformat:"2g" }} {% if listing.price_fixed == False %} - OBO{% endif %}</h5>
-                            <p class="card-text">{{ listing.description }}</p>
+                            <div class="card-body">
+                                <h5 class="card-title">${{ listing.price | floatformat:"2g" }} {% if listing.price_fixed == False %} - OBO{% endif %}</h5>
+                                <p class="card-text">{{ listing.description }}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
     {% endfor %}
 </div>
