--- a/listings/templates/listings/listing_detail.html
+++ b/listings/templates/listings/listing_detail.html
@@ -20,6 +20,16 @@
                 </span>
             </h2>
             <p>{{ listing.description }}</p>
+            <h3>Comments</h3>
+            {% for comment in listing.comments.all %}
+            <div >
+                <div class="card">
+                  <h5 class="card-title">{{ comment.author.public_name }}</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">{{ comment.created }}</h6>
+                  <p class="card-text">{{ comment.text }}</p>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
